# track-exploder

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/audio-core/: Cargo.toml
crates/audio-core/examples/: dump_tags.rs  inspect_stereo.rs
crates/audio-core/src/: decode.rs  encode.rs  extract.rs  lib.rs  metadata.rs  stretch.rs
crates/audio-core/tests/: roundtrip.rs
samples/: README.md
src/: App.svelte  app.css  signalsmith-stretch.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: actions.ts  platform.ts  toast.ts  types.ts
src/lib/audio/: bulk.ts  decode.ts  engine.ts  export.ts  files.ts  load.ts  playback.ts  stretch.ts  stretchNative.ts  tauri.ts  waveform.ts
src/lib/components/: About.svelte  BulkExport.svelte  ExportBar.svelte  PartStrip.svelte  PresetBar.svelte  ProgressBar.svelte  RecentExports.svelte  Toaster.svelte  Transport.svelte  Waveform.svelte
src/lib/mixer/: exports.ts  mixer.test.ts  naming.test.ts  naming.ts  presets.ts  store.ts  tags.ts  userPresets.ts
