[workspace]
resolver = "2"
members = ["crates/audio-core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Safrone/track-exploder"

[profile.release]
# Smaller, faster binaries for distribution.
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

# `tauri dev` compiles in the dev profile. Optimize dependencies (notably
# Symphonia) and our DSP crate even there so audio decoding isn't painfully
# slow, while keeping our own app code unoptimized for fast incremental builds.
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.audio-core]
opt-level = 3
