[package]
name = "track-exploder"
description = "Extract and remix barbershop part-left learning tracks."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# The lib crate is what mobile (iOS/Android) entry points call, and desktop's
# main.rs calls too. Keep app logic here so all platforms share it.
name = "track_exploder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
audio-core = { path = "../crates/audio-core" }

[features]
# Propagate optional MP3 export (LGPL/LAME) down to audio-core.
mp3 = ["audio-core/mp3"]
