[package]
name = "track-exploder"
description = "Extract and remix barbershop part-left learning tracks."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# The lib crate is what mobile (iOS/Android) entry points call, and desktop's
# main.rs calls too. Keep app logic here so all platforms share it.
name = "track_exploder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
audio-core = { path = "../crates/audio-core" }

# Android: resolve a content:// URI's real display name via ContentResolver.
# `wry` (matched to Tauri's version) exposes `dispatch` for JNI on the UI thread.
[target.'cfg(target_os = "android")'.dependencies]
wry = "0.55"
jni = "0.21"

[features]
# Propagate optional MP3 export (LGPL/LAME) down to audio-core.
mp3 = ["audio-core/mp3"]
