[package]
name = "audio-core"
description = "Pure-Rust audio DSP for Track Exploder: decode, channel extraction, and encode. No GUI dependencies."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
symphonia = { version = "0.5", features = [
    "mp3",
    "aac",
    "isomp4",
    "flac",
    "wav",
    "pcm",
    "ogg",
    "vorbis",
] }
hound = "3.5"
flacenc = "0.4"
metaflac = "0.2"
signalsmith-stretch = "0.1"
thiserror = "2"
shine-rs = { version = "0.1", optional = true }
id3 = { version = "1", optional = true }

[features]
# MP3 export uses the pure-Rust Shine encoder (LGPL); off by default to keep the
# core permissive. Pure Rust means it cross-compiles anywhere (incl. Android)
# with no C toolchain.
mp3 = ["dep:shine-rs", "dep:id3"]
